<resources>
    <string name="app_name">MyFriends2</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="phone">Phone</string>
    <string name="add_friend">Add Friend</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="pick_date">Pick Date</string>
</resources>